--- a/package.json
+++ b/package.json
@@ -789,6 +789,8 @@
   },
   "scripts": {
     "start": "node index.js",
+    "heroku-postbuild": "cd client && npm install && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
-  }
+  },
+  "engines": { "node": "16.13.1" }
 }
